---
source: crates/bsnext_input/src/input_test/mod.rs
expression: c
---
Config {
    items: [
        Route {
            path: PathDef {
                inner: "/api",
            },
            kind: Raw(
                Json {
                    json: JsonWrapper(
                        Array [
                            Number(1),
                            Number(2),
                        ],
                    ),
                },
            ),
            opts: Opts {
                cors: None,
                delay: None,
                watch: Bool(
                    true,
                ),
                inject: Bool(
                    true,
                ),
                headers: None,
                cache: Prevent,
                compression: None,
            },
            fallback: None,
        },
    ],
}
